environments/development/dev-service.yml
apiVersion: v1
kind: Service
metadata:
  name: development-service
  namespace: development
spec:
  selector:
    app: development-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
