environments/development/dev-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: my-dev-app  
spec:
  ingressClassName: nginx 
  rules:
  - host: dev.anupamdemos.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: development-service
            port:
              number: 80
